# ProjektKCKGraficzny

./: .gitignore  .gitmodules  BoardAnalyzer.cpp  BoardAnalyzer.h  CMakeLists.txt  Coordinates.h  Dictionary  Dictionary.cpp  Dictionary.h  Dokumentacja Gry Boggle.docx  GameFunctions.cpp  GameFunctions.h  GameState.cpp  GameState.h  InstructionsFunctions.cpp  InstructionsFunctions.h  Leaderboard.cpp  Leaderboard.h  LeaderboardFunctions.cpp  LeaderboardFunctions.h  LeaderboardItem.h  LeaderboardTest  LeaderboardUpdateFunctions.cpp  LeaderboardUpdateFunctions.h  MenuFunctions.cpp  MenuFunctions.h  ScreenChoice.h  gamewindow.cpp  gamewindow.h  instructionswindow.h  leaderboardupdatewindow.cpp  leaderboardupdatewindow.h  leaderboardupdatewindow.ui  leaderboardwindow.cpp  leaderboardwindow.h  leaderboardwindow.ui  main  main.cpp  mainwindow.cpp  mainwindow.h  (+1 more)
boggle/: boggle.cbp
source/: CMakeLists.txt  main.cpp
source/board/: BoardAnalyzer.h  CMakeLists.txt
source/dictionary/: CMakeLists.txt  Dictionary.cpp
source/game/: CMakeLists.txt  GameState.cpp  GameState.h
source/leaderboard/: CMakeLists.txt  Leaderboard.cpp  Leaderboard.h
source/screens/: CMakeLists.txt  gamewindow.cpp  gamewindow.h  gamewindow.ui  instructionswindow.cpp  instructionswindow.h  instructionswindow.ui  leaderboardupdatewindow.cpp  leaderboardupdatewindow.h  leaderboardwindow.h  mainwindow.cpp  mainwindow.h
testygoogle/: BoardAnalyzer.cpp  CMakeLists.txt  Dictionary.cpp  GameStateTest.cpp  LeaderboardTest.cpp  menuTest.cpp
